--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flash_composition_app
+name: project-368459758861
 description: "瞬間英作文アプリ - 英語学習を効率的にサポートする学習アプリ"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -46,6 +46,11 @@ dependencies:
   
   # SVG support
   flutter_svg: ^2.0.0
+  
+  # Firebase dependencies
+  firebase_core: ^3.3.0
+  firebase_auth: ^5.1.4
+  google_sign_in: ^6.2.0
 
 dev_dependencies:
   flutter_test:
