fix google auth

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: project-368459758861
+name: project_368459758861
 description: "瞬間英作文アプリ - 英語学習を効率的にサポートする学習アプリ"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
