--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   # Firebase dependencies
   firebase_core: ^3.3.0
   firebase_auth: ^5.1.4
+  cloud_firestore: ^5.2.0
   google_sign_in: ^6.2.0
 
 dev_dependencies:
