--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: project_368459758861
-description: "瞬間英作文アプリ - 英語学習を効率的にサポートする学習アプリ"
+name: flash_for_beginners
+description: "Flash for beginners - 初心者向け英語学習アプリ"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
